--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   
   <div class="attribution text-lg bg-slate-950 w-full text-[#cee3e9] py-14 text-center">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" class="text-[#3e52a3]">Frontend Mentor</a>. 
-    Coded by <a href="#" class="text-[#3e52a3]">Syeda Walija Hassan</a>.
+    Coded by <a href="https://github.com/WALIJA7HASSAN" class="text-[#3e52a3]">Syeda Walija Hassan</a>.
   </div>
   <!-- javascript -->
   <script src="./app.js"></script>
